fetch request for currents API

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div class="searchbar">
             <div class="search-container">
               <form action="#">
-                <input type="text" placeholder="Search Stock..." name="search">
-                <button type="button">Enter</button>
+                <input type="text" placeholder="Search Stock..." name="search" id="search_field">
+                <button type="button" id= "search_button">Enter</button>
               </form>
             </div>
         </div>
