Added sameStock() function, closestSearchResult() function to get correct stock before proceeding with other API calls

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             <h1>Top Stocks</h1>
         </div>
     </content>
-
-    <script src="./assets/script.js"></script>
+    <!--<script src="assets/script.js"></script>-->
+    <script src="assets/finance.js"></script>
   </body>
 
 
