--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css" integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css">
-    <title>$Stock News</title>
+    <title>$TOCK NEWS</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -41,6 +41,11 @@
             </div>
             </div>
         </content>
+        <content class="pure-u-1 pure-u-md-1-4">
+            <div class="top-stocks">
+                <h1><!--Company name goes here--></h1>
+            </div>
+        </content>
         <content class="pure-u-1 pure-u-md-3-4">
             <div class="news">
                 <div class="news-title">
@@ -49,11 +54,6 @@
                 <div class="news-results">
                     Headlines
                 </div>
-            </div>
-        </content>
-        <content class="pure-u-1 pure-u-md-1-4">
-            <div class="top-stocks">
-                <h1><!--Company name goes here--></h1>
             </div>
         </content>
         </div>
