--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
         </content>
         </div>
       </main>
+      <content class="footer">
+        <p>Created by Sam Gates, Nelson Johns, Thang Nguyen, and Nathan Taylor</p>
+    </content>
       <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
       </script>
       <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
