--- a/index.html
+++ b/index.html
@@ -1,68 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css" integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/pure-min.css"
+        integrity="sha384-LTIDeidl25h2dPxrB2Ekgc9c7sEC3CWGM6HeFmuDNUjX76Ert4Z4IY714dhZHPLd" crossorigin="anonymous">
     <link rel="stylesheet" href="https://unpkg.com/purecss@2.0.5/build/grids-responsive-min.css">
     <title>$Stock News</title>
     <link rel="stylesheet" href="./assets/style.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
-  </head>
+</head>
+
+<body>
     <header>
         <h1 class="title">$TOCK NEWS</h1>
         <div class="searchbar">
             <div class="search-container">
-              <form action="#">
-                <input id="textbox" type="text" placeholder="Search Stock..." name="search">
-                <button id="button" type="button">Enter</button>
-              </form>
+                <form action="#">
+                    <input id="textbox" type="text" placeholder="Search Stock..." name="search">
+                    <button id="button" type="button">Enter</button>
+                </form>
             </div>
         </div>
     </header>
-      <main>
+    <main>
         <content class="history-sidebar">
             <div class="history-title">
                 <h2>History</h2>
             </div>
             <div class="history-list">
-                <h3>Placeholder</h3></div>
+                <h3>Placeholder</h3>
+            </div>
             <div class="history-clear">
                 <button id="clear" type="button">Clear History</button>
             </div>
         </content>
         <div class="pure-g">
-        <content class="pure-u-1">
-            <div class="stock">
-                <div class="stock-current">
-                    <h1><!--Stock name goes here--></h1>
-                    <h3><!--Stock price goes here--></h3>
-            </div>
-            </div>
-        </content>
-        <content class="pure-u-1 pure-u-md-3-4">
-            <div class="news">
-                <div class="news-title">
-                    <h1>Stock Headline Results</h1>
+            <content class="pure-u-1">
+                <div class="stock">
+                    <div class="stock-current">
+                        <h1>
+                            <!--Stock name goes here-->
+                        </h1>
+                        <h3>
+                            <!--Stock price goes here-->
+                        </h3>
+                    </div>
                 </div>
-                <div class="news-results">
-                    Headlines
+            </content>
+            <content class="pure-u-1 pure-u-md-3-4">
+                <div class="pure-u-1 pure-u-md-3-4 news">
+                    <div id="news-card" class="pure-u-1 pure-u-md-3-4 news-title">
+                        <h1>Stock Headline Results</h1>
+                    </div>
                 </div>
-            </div>
-        </content>
-        <content class="pure-u-1 pure-u-md-1-4">
-            <div class="top-stocks">
-                <h1><!--Company name goes here--></h1>
-            </div>
-        </content>
+            </content>
+            <content class="pure-u-1 pure-u-md-1-4">
+                <div class="top-stocks">
+                    <h1>
+                        <!--Company name goes here-->
+                    </h1>
+                </div>
+            </content>
         </div>
-      </main>
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-      </script>
-      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="Assets/script.js"></script>
-    <script src="assets/finance.js"></script>
+    </main>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <!-- <script src="Assets/script.js"></script> -->
+    <!-- <script src="assets/finance.js"></script> -->
     <script src="./assets/script.js"></script>
-  </body>
-
+</body>
