--- a/index.html
+++ b/index.html
@@ -38,41 +38,39 @@
             </div>
         </content>
         <div class="pure-g">
-        <content class="pure-u-1">
-            <div class="stock">
-                <div class="stock-current">
-                    <h1><!--Stock name goes here--></h1>
-                    <h3><!--Stock price goes here--></h3>
-            </div>
-            </div>
-        </content>
-        <content class="pure-u-1 pure-u-md-1-4">
-            <div class="top-stocks">
-                <h1><!--Company name goes here--></h1>
-            </div>
-        </content>
-        <content class="pure-u-1 pure-u-md-3-4">
-            <div class="news">
-                <div class="news-title">
-                    <h1>Stock Headline Results</h1>
+            <content class="pure-u-1">
+                <div class="stock">
+                    <div class="stock-current">
+                        <h1>
+                            <!--Stock name goes here-->
+                        </h1>
+                        <h3>
+                            <!--Stock price goes here-->
+                        </h3>
+                    </div>
+                </div>
+            </content>
+            <content class="pure-u-1 pure-u-md-1-4">
+                <div class="top-stocks">
+                    <h1>
+                        <!--Company name goes here-->
+                    </h1>
                 </div>
             </content>
             <content class="pure-u-1 pure-u-md-3-4">
-                <div class="pure-u-1 pure-u-md-3-4 news">
-                    <div id="news-card" class="pure-u-1 pure-u-md-3-4 news-title">
-                        <h1>Stock Headline Results</h1>
-                    </div>
+                <div id="news-card" class="news">
+                    <h1>Stock Headline Results</h1>
                 </div>
-            </div>
-        </content>
+            </content>
         </div>
-      </main>
-      <content class="footer">
+    </main>
+    <content class="footer">
         <p>Created by Sam Gates, Nelson Johns, Thang Nguyen, and Nathan Taylor</p>
     </content>
-      <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
-      </script>
-      <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
+        </script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="assets/finance.js"></script>
     <script src="./assets/script.js"></script>
 </body>
