--- a/index.html
+++ b/index.html
@@ -75,5 +75,5 @@
         </script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="assets/finance.js"></script>
-    <script src="./assets/script.js"></script>
+<!--     <script src="./assets/script.js"></script> -->
 </body>
