--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </div>
     </main>
     <content class="footer">
-        <p>Created by Sam Gates, Nelson Johns, Thang Nguyen, and Nathan Taylor</p>
+        <p>Created by Sam Gates, Nelson Johns, Thang Nguyen</p>
     </content>
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"
         integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous">
