added function to add top finance news headlines at page load

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <content class="pure-u-1 pure-u-md-3-4">
                 <div class="news scroll">
                     <div id="news-card" class="news-title">
-                        <h1>Stock Headline Results</h1>
+                        <h1 id= "news-card-heading"></h1>
                     </div>
                 </div>
         </div>
